correction overflow 3

--- a/main.scss
+++ b/main.scss
@@ -42,15 +42,16 @@ h6 {
   box-sizing: border-box;
 }
 
+html, body {
+  position:relative;
+  overflow-x:hidden !important;
+}
+
 body {
   font-family: "Nunito", Arial, Verdana, sans-serif;
   /* 1rem = 14px, 87.5% = 14px*/
   font-size: 87.5%;
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  height: 100%;
-  width: 100%;
-  position: relative;
 }
 
 @media (max-width: 767px) {
